# mis_analytics

./: .gitignore  12_forecast.html  12_forecast.md  CHANGELOG.md  README.md  core.html  core.html.md  desapher.html  desapher.html.md  etl.html  etl.html.md  index.html  index.html.md  pyproject.toml  search.json  settings.ini  sitemap.xml
_proc/: 00_core.html.md  00_core.ipynb  10_etl.html.md  10_etl.ipynb  11_deSAPher.html.md  11_deSAPher.ipynb  index.html.md  index.ipynb  sidebar.yml.bak  tmpfon_nbu6.ipynb  tmplfiw9531.ipynb  tmpx26yuoyp.ipynb
_proc/_docs/: core.html  desapher.html  etl.html  index.html  robots.txt  search.json  sitemap.xml
mis_analytics/: _modidx.py  core.py  desapher.py
mis_core/: _modidx.py  core.py  desapher.py  etl.py
nbs/: 00_core.ipynb  10_etl.ipynb  10_etl_dup1.ipynb  11_deSAPher.ipynb  12_forecast.ipynb  index.ipynb  nbdev.yml
