[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "mis_analytics"
dynamic = ["version"]
description = "Helpers for data work in supply chain analytics (and others?)"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
authors = [{name = "Jan Hesse and Jonas Jakubassa", email = "jhesse@mis-analytics.de"}]
keywords = ['etl,', 'sap,', 'nbdev']
classifiers = ["Natural Language :: English", "Intended Audience :: Developers", "Development Status :: 3 - Alpha", "Programming Language :: Python :: 3", "Programming Language :: Python :: 3 :: Only"]
dependencies = [
    'pandas',
    'numpy',
    'httpx',
    'beautifulsoup4',
    'dialoghelper',
    'fastcore',
    'nbdev',
    "polars>=1.40.0",
]

[project.urls]
Repository = "https://github.com/MIS-Analytics/mis_analytics"
Documentation = "https://MIS-Analytics.github.io/mis_analytics"

[project.entry-points.nbdev]
mis_analytics = "mis_analytics._modidx:d"

[tool.setuptools.dynamic]
version = {attr = "mis_analytics.__version__"}

[tool.setuptools.packages.find]
include = ["mis_analytics"]

[tool.nbdev]
